force-app/main/default/objects/User/fields/Support_Accountant_1__c.field-meta.xml
<CustomField>
    <fullName>Support_Accountant_1__c</fullName>
    <label>Support Accountant 1</label>
    <relationshipName>Support_Accountant_1</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>