force-app/main/default/objects/User/fields/Support_Accountant_2__c.field-meta.xml
<CustomField>
    <fullName>Support_Accountant_2__c</fullName>
    <label>Support Accountant 2</label>
    <relationshipName>Support_Accountant_2</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>