force-app/main/default/objects/User/fields/Support_Accountant_3__c.field-meta.xml
<CustomField>
    <fullName>Support_Accountant_3__c</fullName>
    <label>Support Accountant 3</label>
    <relationshipName>Support_Accountant_3</relationshipName>
    <restrictedAdminField>false</restrictedAdminField>
    <type>Hierarchy</type>
</CustomField>