force-app/main/default/objects/User/fields/Tax_Form_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Tax_Form_Knowledge__c</fullName>
    <label>Tax Form Knowledge</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Trusts (1041)</fullName>
            </value>
            <value>
                <fullName>Partnerships (1065)</fullName>
            </value>
            <value>
                <fullName>Corporations (1120)</fullName>
            </value>
            <value>
                <fullName>S Corps (1120S)</fullName>
            </value>
            <value>
                <fullName>Individuals (1041)</fullName>
            </value>
            <value>
                <fullName>Non-Profit (990)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>