force-app/main/default/objects/User/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Senior Tax Advisor</fullName>
            </value>
            <value>
                <fullName>Support Accountant</fullName>
            </value>
            <value>
                <fullName>Analyst</fullName>
            </value>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Intern</fullName>
            </value>
            <value>
                <fullName>Seasonal</fullName>
            </value>
            <value>
                <fullName>Tax Advisor</fullName>
            </value>
            <value>
                <fullName>Entity Specialist</fullName>
            </value>
            <value>
                <fullName>Billing Team</fullName>
            </value>
            <value>
                <fullName>Retention team</fullName>
            </value>
            <value>
                <fullName>Legal Plan</fullName>
            </value>
            <value>
                <fullName>Remote LZ</fullName>
            </value>
            <value>
                <fullName>Auxiliary</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>VDI STA</fullName>
            </value>
            <value>
                <fullName>Bookkeeping</fullName>
            </value>
            <value>
                <fullName>Remote Tax Advisor</fullName>
            </value>
            <value>
                <fullName>Remote Tax Preparer</fullName>
            </value>
            <value>
                <fullName>Senior TAS Supervisor</fullName>
            </value>
            <value>
                <fullName>Senior Admin Support Manager</fullName>
            </value>
            <value>
                <fullName>Admin Support Manager</fullName>
            </value>
            <value>
                <fullName>Admin Support Supervisor</fullName>
            </value>
            <value>
                <fullName>Senior Admin Support</fullName>
            </value>
            <value>
                <fullName>Admin Support II</fullName>
            </value>
            <value>
                <fullName>Admin Support I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>