force-app/main/default/objects/User/fields/X1_1_Default_Owner__c.field-meta.xml
<CustomField>
    <fullName>X1_1_Default_Owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Distributor</label>
    <type>Checkbox</type>
</CustomField>