force-app/main/default/objects/User/validationRules/Users_Cannot_Edit_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Users_Cannot_Edit_Name</fullName>
    <active>true</active>
    <description>This rule prevents basic. users from changing their names in Salesforce</description>
    <errorConditionFormula>AND(
NOT($Profile.Name = &quot;System Admin&quot;),
NOT($Profile.Name = &quot;API User&quot;),
NOT($Profile.Name = &quot;System Administrator&quot;),
NOT($Profile.Name = &quot;Sales Office Manager&quot;),
OR(ISCHANGED( FirstName ),
ISCHANGED(LastName))
)</errorConditionFormula>
    <errorMessage>Please contact an administrator to change your name</errorMessage>
</ValidationRule>