force-app/main/default/objects/User/listViews/Active_PD_CORE_Users.listView-meta.xml
<ListView>
    <fullName>Active_PD_CORE_Users</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>Available_Restricted_Lead_Sources__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>TSA_Performance__c</columns>
    <columns>Paid_Digital_Performance__c</columns>
    <columns>Skills_Sales__c</columns>
    <columns>Team_Role__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.PHONE</columns>
    <columns>Namely_Employee_ID__c</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Skills_Sales__c</field>
        <operation>includes</operation>
        <value>Paid Digital–CORE</value>
    </filters>
    <label>Active PD CORE Users</label>
    <language>en_US</language>
</ListView>