force-app/main/default/objects/User/listViews/Active_Users_FL.listView-meta.xml
<ListView>
    <fullName>Active_Users_FL</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TSA_Performance__c</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.PHONE</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>Sales_Team__c</columns>
    <columns>Skills_Sales__c</columns>
    <columns>Namely_Employee_ID__c</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>FL</value>
    </filters>
    <label>Active Users - FL</label>
    <language>en_US</language>
</ListView>