force-app/main/default/objects/User/listViews/Any_User.listView-meta.xml
<ListView>
    <fullName>Any_User</fullName>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>User_License__c</columns>
    <filterScope>Everything</filterScope>
    <label>Any User</label>
    <language>en_US</language>
</ListView>