force-app/main/default/objects/User/listViews/Appointment_Assignment.listView-meta.xml
<ListView>
    <fullName>Appointment_Assignment</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>Can_Handle_VIP_Clients__c</columns>
    <columns>Non_Profit__c</columns>
    <columns>International_Taxation__c</columns>
    <columns>Zone__c</columns>
    <columns>Industries__c</columns>
    <columns>Credentials__c</columns>
    <columns>Gender__c</columns>
    <columns>Languages__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Tax Accountant,Tax manager</value>
    </filters>
    <label>Appointment Assignment</label>
    <language>en_US</language>
</ListView>