force-app/main/default/objects/User/listViews/Bark_Reps.listView-meta.xml
<ListView>
    <fullName>Bark_Reps</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Available_Restricted_Lead_Sources__c</field>
        <operation>includes</operation>
        <value>Bark</value>
    </filters>
    <label>Bark Reps</label>
    <language>en_US</language>
</ListView>