force-app/main/default/objects/User/listViews/Cash_Money.listView-meta.xml
<ListView>
    <fullName>Cash_Money</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>Available_Restricted_Lead_Sources__c</columns>
    <columns>Skills_Sales__c</columns>
    <columns>NVMContactWorld__NVM_Agent_Id__c</columns>
    <columns>Hire_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Team__c</field>
        <operation>equals</operation>
        <value>Michael Cashman</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Cash Money</label>
    <language>en_US</language>
    <sharedTo>
        <role>Executive</role>
        <role>Office_Manager</role>
        <role>Sales_Manager</role>
    </sharedTo>
</ListView>