force-app/main/default/objects/User/listViews/Digital_Marketing_Reps.listView-meta.xml
<ListView>
    <fullName>Digital_Marketing_Reps</fullName>
    <booleanFilter>1 and 2 and 3</booleanFilter>
    <columns>Long_ID__c</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>Sales_Team__c</columns>
    <columns>Paid_Digital_Performance__c</columns>
    <columns>TSA_Performance__c</columns>
    <columns>Skills_Sales__c</columns>
    <columns>Available_Restricted_Lead_Sources__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Skills_Sales__c</field>
        <operation>includes</operation>
        <value>Paid Digital–CORE</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Paid_Digital_Performance__c</field>
        <operation>notEqual</operation>
        <value>New Hire</value>
    </filters>
    <label>Digital Marketing Reps</label>
    <language>en_US</language>
    <sharedTo>
        <role>Executive</role>
    </sharedTo>
</ListView>