force-app/main/default/objects/User/listViews/Low_Activity_Users.listView-meta.xml
<ListView>
    <fullName>Low_Activity_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>notEqual</operation>
        <value>LAST_N_DAYS:30</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Low Activity Users</label>
    <language>en_US</language>
    <sharedTo>
        <role>Executive</role>
        <role>Office_Manager</role>
        <role>Sales_Manager</role>
    </sharedTo>
</ListView>