force-app/main/default/objects/User/listViews/Marvels.listView-meta.xml
<ListView>
    <fullName>Marvels</fullName>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>MANAGER</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Team__c</field>
        <operation>equals</operation>
        <value>JT Keenan</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Marvels</label>
    <language>en_US</language>
    <sharedTo>
        <role>Executive</role>
        <role>Office_Manager</role>
        <role>Sales_Manager</role>
    </sharedTo>
</ListView>